--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,9 +1,10 @@
-name: Build
+name: Pull Request
 
 on:
-  push:
+  pull_request:
     branches:
       - master
+    types: [opened, reopened, synchronize]
 
 jobs:
   build:
