--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r test.requirements.txt
+        pip install -r requirements.txt
     - name: Set up npm to install pyright.
       uses: actions/setup-node@v2-beta
       with:
@@ -33,7 +33,6 @@ jobs:
     - name: Run checks script and generate coverage report.
       run: |
         ./checks.sh
-        black __app__ test --check
         coverage xml
     - name: Publish code coverage.
       uses: codecov/codecov-action@v1
