--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -7,7 +7,7 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
-  build:
+  pullRequest:
     runs-on: ubuntu-latest
     strategy:
       matrix:
