--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,16 +1,17 @@
-name: Build
+name: Pull Request
 
 on:
-  push:
+  pull_request:
     branches:
       - master
+    types: [opened, reopened, synchronize]
 
 jobs:
-  build:
+  pullRequest:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
         node-version: [13]
 
     steps:
@@ -22,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r test.requirements.txt
+        pip install -r requirements.txt
     - name: Set up npm to install pyright.
       uses: actions/setup-node@v2-beta
       with:
@@ -33,7 +34,6 @@ jobs:
     - name: Run checks script and generate coverage report.
       run: |
         ./checks.sh
-        black __app__ test --check
         coverage xml
     - name: Publish code coverage.
       uses: codecov/codecov-action@v1
