--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,17 @@ marshmallow==3.9.1
 marshmallow-enum==1.5.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
+numpy==1.19.4
 packaging==20.4
+pandas==1.1.4
 pathspec==0.8.1
 pluggy==0.13.1
 py==1.9.0
 pylint==2.6.0
 pyparsing==2.4.7
 pytest==6.1.2
+python-dateutil==2.8.1
+pytz==2020.4
 regex==2020.11.13
 selenium==3.141.0
 six==1.15.0
